# meshapi-code

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  NOTICE  README.md  UPGRADE.md  pyproject.toml
.github/workflows/: publish.yml
src/meshapi/: attachments.py  cli.py  client.py  commands.py  completer.py  config.py  keywatcher.py  memory.py  optimize.py  permissions.py  plan.py  render.py  safety.py  statusbar.py  tools.py  update.py
